# diablo_bot

./: CMakeLists.txt  README.md  package.xml
config/: diff_drive_controller.yaml  my_controllers.yaml  pidcontrol.py  view_robot.rviz  wheels_control.py
description/: diablo_core.xacro  gazebo_control.xacro  gazebo_plugin.xacro  imu_sensor.xacro  robot.urdf.xacro  ros2_control.xacro  transforms.xacro
launch/: launch_sim.launch.py  rsp.launch.py  spawn_urdf.launch.py
worlds/: diablo_bot.world
