<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diablo_bot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="my_email@email.com">Smitha</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path = "home/mystique/dev_ws/install/diablo_bot/share/" />
    <gazebo_ros gazebo_media_path = "home/mystique/dev_ws/install/diablo_bot/share/" />
  </export>
</package>
